--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="ko">
 <head>
 
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-WRM5R7VR');
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0KTDLGK1L"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-W0KTDLGK1L');
     </script>
-    <!-- End Google Tag Manager -->
 
 
     <meta charset="UTF-8">
@@ -81,15 +82,6 @@
 </head>
 <body>
 
-
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WRM5R7VR"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-
-
     <div class="background">
         <img src="assets/photo1.jpg" alt="배경사진 1">
         <div class="photo2-container">
@@ -103,8 +95,5 @@
         <img src="assets/photo3.jpg" alt="배경사진 3">
     </div>
 
-
-
 </body>
 </html>
-
