--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="photo2-container">
             <img src="assets/photo2.jpg" alt="배경사진 2">
             <div class="centered-button">
-                <a href="https://naver.com">
+                <a href="https://apps.apple.com/us/app/%ED%86%A0%EB%A6%AC%EC%88%B2/id6737466405">
                     <img src="assets/photo4.jpg" alt="버튼 이미지">
                 </a>
             </div>
